Tweaked tab style spacing and alignment, fixed font bug.

--- a/public_html/media/css/style.css
+++ b/public_html/media/css/style.css
@@ -819,6 +819,10 @@ ul.header { cursor: pointer; }
 	border-color: #d1d1d1;
 }
 
+#tabs.ui-widget {
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
 #tabs .ui-state-default {
 	height: 20px;
 	font-size:  0.8em;
@@ -842,6 +846,7 @@ ul.header { cursor: pointer; }
 
 #tabs .ui-tabs-panel {
 	padding: 10px 7px;
+	font-family: Arial, Helvetica, sans-serif;
 
 	border: 1px solid rgba(199,199,199,0.8);
 	border-top: none;
@@ -867,7 +872,7 @@ ul.header { cursor: pointer; }
 }
 
 #tabs .ui-tabs-panel li div.player {
-	padding: 9px 10px;
+	padding: 5px 10px;
 	color: #393939;
 }
 
@@ -877,14 +882,15 @@ ul.header { cursor: pointer; }
 	border-radius: 5px;
 }
 
-/* Profession icon */
-#tabs .ui-tabs-panel li div.player img {
-	vertical-align: top;
+/* Centering profession icon */
+#tabs .ui-tabs-panel li div.player > img {
+	position: absolute; 
+	top: 50%; margin-top: -10px;
 }
 
 #tabs .ui-tabs-panel li div.role {
 	display: inline-block;
-	padding-left: 5px;
+	margin-left: 30px;
 	width: 140px; height: 2.4em;
 	overflow: hidden;
 	word-wrap: break-word;		/* break long names up */
@@ -897,7 +903,9 @@ ul.header { cursor: pointer; }
 
 /* Comment icon */
 #tabs .ui-tabs-panel li div.player a {
-	float: right;
+	position: absolute;
+	top: 50%; margin-top: -8px;
+	float: right; right: 10px;
 	cursor: default;
 }
 
@@ -932,15 +940,11 @@ ul.header { cursor: pointer; }
 	color: white;
 }
 
-/* Empty list */
-#tabs .ui-tabs-panel li.empty {
-	padding-bottom: 5px;
-}
-
 /* Signup / Withdraw link styles */
 #tabs .ui-tabs-panel > a:link, 
 #tabs .ui-tabs-panel > a:visited {
 	display: block;
+	margin-top: 5px;
 	padding: 5px 0;
 
 	text-decoration: none;
